@@ -1,25 +1,25 @@
 package com.lorepo.icplayer.client.ui;
 
 public class Ruler {
-	
+
 	private int position;
 	private String type;
 
 	public Ruler() {}
-	
+
 	public Ruler(String type, int position) {
 		this.type = type;
 		this.position = position;
 	}
-	
+
 	public String toXML() {
-		return "<" + type +">" + position +"</"+ type +">";
+		return "<" + type +">" + position + "</"+ type +">";
 	}
-	
+
 	public String getType() {
 		return type;
 	}
-	
+
 	public int getPosition() {
 		return position;
 	}
